# inkwell

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_TECHNICAL.md  fallback_rows.json  progress.json  pyproject.toml  reddit_outreach.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_scanner.md  persona_submission.md
.github/workflows/: ci.yml
config/: filters.yml  personality.yml  subreddits.yml  subreddits_1.yml
config/personas/: README.md  _template.yml  indie-hacker.yml
data/: progress.json
docs/: GOOD_FIRST_ISSUES.md  ROADMAP.md
inkwell/: __init__.py  __main__.py  app.py  config.py
inkwell/analyzers/: __init__.py  llm_client.py  pipeline.py  rules.py  voice.py
inkwell/exporters/: __init__.py  csv_exporter.py  google_sheets.py
inkwell/filters/: __init__.py  dedup.py  rule_filter.py
inkwell/personas/: __init__.py  loader.py  prompt_builder.py
inkwell/routes/: api_profile.py  api_scan.py  api_settings.py  api_signals.py  pages.py
inkwell/scanners/: __init__.py  base.py  reddit.py  registry.py
inkwell/scheduler/: scheduler.py
inkwell/static/: app.css
inkwell/static/js/: common.js  index.js  profile.js  scan.js  settings.js
inkwell/storage/: __init__.py  campaigns.py  feedback.py  progress.py  scan_history.py  signals.py
inkwell/templates/: base.html  index.html  profile.html  scan.html  settings.html
outreachpilot/: __init__.py  __main__.py  app.py  config.py
outreachpilot/analyzers/: __init__.py  base.py  llm_client.py  pipeline.py
outreachpilot/exporters/: __init__.py  base.py  csv_exporter.py  google_sheets.py
outreachpilot/filters/: __init__.py  dedup.py  rule_filter.py
outreachpilot/personas/: __init__.py  loader.py
outreachpilot/routes/: __init__.py
outreachpilot/scanners/: __init__.py  base.py  reddit.py  registry.py
outreachpilot/scheduler/: __init__.py
outreachpilot/storage/: __init__.py  campaigns.py  feedback.py  progress.py  scan_history.py  signals.py
tests/: conftest.py
tests/test_analyzers/: test_base.py  test_llm_client.py  test_rules.py
tests/test_filters/: test_rule_filter.py
tests/test_personas/: test_prompt_builder.py
tests/test_routes/: test_api_profile.py  test_api_scan.py  test_api_settings.py  test_api_signals.py
tests/test_storage/: test_progress.py
