[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outreachpilot"
version = "0.1.0"
description = "Open source AI outreach intelligence tool for entrepreneurs"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Saurabh Singh"},
]
keywords = ["outreach", "reddit", "ai", "marketing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "litellm>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
outreachpilot = "outreachpilot.__main__:main"

[tool.setuptools.packages.find]
include = ["outreachpilot*"]

[tool.ruff]
line-length = 100
target-version = "py311"
